bin/testsuite/tests/compiler/src/errors/compiler2670.swg
#global testerror "Err0503"
#import("test_foreign")